Fixed the different part with mobile and without fonts

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,7 +14,9 @@
     background-image: url('../images/bg-tablet-pattern.svg');
     background-size: 100%;
     background-repeat: no-repeat;
-    background-position: 120px 200px
+    background-position: 120px 200px;
+    text-align: center;
+    justify-content: center;
 }
 
 .manage__bring__button {
