Fixed the footer and adding some class name in html

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -27,7 +27,7 @@
     color: white;
     background-color: #FF4500;
     border: none;
-    border-radius: 30px
+    border-radius: 30px;
 }
 
 .manage__what__containerbutton {
