--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -1,10 +1,37 @@
+body {
+  padding: 0;
+  margin: 0;
+  max-width: 1440px;
+  max-height: 2724px;
+  margin-inline-start: auto;
+  margin-inline-end: auto; }
+
 .manage-header {
   background-image: url("../images/bg-tablet-pattern.svg");
   background-size: 100%;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: 100px -56px; }
+
+.masthead {
+  position: relative; }
+  .masthead__navigation__list {
+    list-style: none; }
+  .masthead__navigation__lists--anchore {
+    text-decoration: none; }
 
 .manage__bring__image {
   width: 100%; }
+
+.bar {
+  position: absolute;
+  top: 1rem;
+  right: 1rem; }
+
+.check {
+  zoom: 2;
+  top: calc(1rem / 10);
+  position: absolute;
+  right: calc(1rem / 3); }
 
 .manage__bring {
   background-image: url("../images/bg-tablet-pattern.svg");
