--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,6 +11,10 @@
 .masthead {
   position: relative;
     
+  &__navigation {
+      position: relative;
+  }
+
   &__navigation__list {
       list-style: $list-style
   }
@@ -29,11 +33,16 @@
     width: 100%;
 }
 
-.bar {
+.bar, .button__open {
     position: absolute;
     top:calc(#{$top} * 2);
     right: $right;
     
+}
+
+.masthead__closebutton {
+    position: absolute;
+    right: $right;
 }
 
 .manage__bring__subtitle {
@@ -41,7 +50,7 @@
   }
 
 .check {
-    zoom: 2;
+    zoom: 4;
     top: calc(#{$top} / 2);
     position: absolute;
     right: calc(#{$right} / 3);
@@ -95,6 +104,21 @@
     padding: calc(#{$padding} * 2);
     position: relative;
     
+    
+}
+
+.button__open {
+    background-color: transparent;
+    border: none;
+}
+
+
+input[type=checkbox]:checked + .image__open {
+    display: none;
+}
+
+input[type=checkbox]:checked + .image__close {
+   display: none;
 }
 
 
@@ -123,6 +147,21 @@ input[type=checkbox]:not(:checked) + .masthead__navigation {
 
 .manage__bring__image {
     margin-top: calc(#{$margin-top} * -23);
+}
+
+
+.curtain {
+	background-color: rgba(145, 148, 144, 0.5);
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	display: none;
+	
+	
 }
 
 
