--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -324,20 +324,16 @@ input[type=checkbox]:checked ~ .curtain .curtain {
   .manage__differents {
     margin-inline-end: calc(1rem * 2); } }
 
-.manage__what {
-  width: 1400px; }
-
 .manage__what__subcontainer {
   position: relative;
   margin-right: calc(1rem * 3); }
 
+.container__slide {
+  overflow: hidden; }
+
 .manage__what__container {
   display: flex;
   justify-content: space-around; }
-
-.manage__what__smcontainer {
-  padding: 1rem;
-  margin-top: calc(1rem * 3); }
 
 .manage__what__image {
   position: absolute;
@@ -353,7 +349,11 @@ input[type=checkbox]:checked ~ .curtain .curtain {
 .manage__what__smcontainer {
   background-color: #d6d5d5;
   text-align: center;
-  justify-content: center; }
+  justify-content: center;
+  padding: 1rem;
+  margin-top: calc(1rem * 3);
+  margin-bottom: calc(1rem * 3);
+  width: 340px; }
 
 .manage__what__button {
   padding-top: 1rem;
@@ -370,14 +370,16 @@ input[type=checkbox]:checked ~ .curtain .curtain {
 
 .manage__slider__container {
   position: relative;
-  overflow: hidden; }
+  width: 100%;
+  height: 100%; }
 
 .manage__menu {
   position: absolute;
   left: 0;
   z-index: 900;
   width: 100%;
-  bottom: 0; }
+  bottom: 0;
+  margin-inline-start: 50%; }
 
 .container__slide {
   display: flex; }
