--- a/scss/_what_they_said.scss
+++ b/scss/_what_they_said.scss
@@ -2,18 +2,23 @@
 
 .manage__what__subcontainer {
    position: relative;
-   margin-right: calc(#{$margin-right} * 3);
+   margin-right: calc(#{$margin-right} * 1);
    
 
 }
 
+
+
 .container__slide {
     overflow: hidden;
+    display: flex;
 }
+
 
 .manage__what__container {
     display: flex;
     justify-content: space-around;
+    margin-top: calc(#{$margin-top} * 6);
     
 }
 
@@ -30,9 +35,7 @@
     margin-top: 5rem
 }
 
-.manage__what__container {
-    margin-top: calc(#{$margin-top} * 6);
-}
+
 
 
 
@@ -61,14 +64,9 @@
     margin-top: 2rem;
 }
 
-.manage__what__bigtitle {
-   
-}
 
 .manage__slider__container {
     position: relative;
-    // overflow: hidden;
-    // margin-top: 2rem;
     width: 100%;
     height: 100%;
     
@@ -80,18 +78,9 @@
     z-index: 900;
     width: 100%;
     bottom: 0;
-    margin-inline-start: 50%;
+    text-align: center;
 }
 
-.container__slide {
-    display: flex;
-    
-}
-
-.slide-dot {
-    border: gray solid 2px;
-
-}
 
 .manage__menu label {
     cursor: pointer;
@@ -100,28 +89,35 @@
     height: 9px;
     background-color: #fff;
     border-radius: 50px;
-    // margin: 1rem;
     &:hover {
         background-color: orange;
     }
 }
 
 
+.slide-dot {
+    border: gray solid 2px;
+
+}
+
+
 [id^="slide"]:checked + .slide {
   left: 0;
   z-index: 100;
-  transition: left .65s ease-out;
+  transition: right .65s ease-out;
 }
 
 .slide {
   width: 100%;
   height: 100%;
-//   position: absolute;
-//   top: 0;
-//   left: 100%;
   z-index: 10;
   background-size: cover;
   background-position: 50% 50%;
   transition: left 0s .75s;
+}
+
+
+.manage__what__paragraph {
+    padding: 2rem;
 }
 
