--- a/scss/_what_they_said.scss
+++ b/scss/_what_they_said.scss
@@ -46,7 +46,7 @@
     padding: $padding;
     margin-top: calc(#{$margin-top} * 3);
     margin-bottom: calc(#{$margin-bottom} * 3);
-   width: 340px;
+   width: 300px;
 }
 
 .manage__what__button {
@@ -111,13 +111,11 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  background-size: cover;
-  background-position: 50% 50%;
   transition: left 0s .75s;
 }
 
 
-.manage__what__paragraph {
-    padding: 2rem;
-}
+// .manage__what__paragraph {
+//     padding: 2rem;
+// }
 
