--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -339,18 +339,25 @@ input[type=checkbox]:checked ~ .curtain .curtain {
 
 .manage__what__image {
   position: absolute;
-  top: -12%;
+  top: 0%;
   left: 25%; }
 
 .manage__what__title {
   margin-top: 5rem; }
+
+#slide-dot-1,
+#slide-dot-2,
+#slide-dot-3,
+#slide-dot-4 {
+  position: absolute;
+  left: 50%; }
 
 .manage__what__smcontainer {
   background-color: #d6d5d5;
   text-align: center;
   justify-content: center;
   padding: 1rem;
-  margin-top: calc(1rem * 3);
+  margin-top: calc(1rem * 4);
   margin-bottom: calc(1rem * 3);
   width: 300px; }
 
