--- a/scss/_what_they_said.scss
+++ b/scss/_what_they_said.scss
@@ -69,6 +69,12 @@
     border-radius: 30px
 }
 
+
+.manage__what__button:hover {
+    box-shadow:  2px 10px 0px #f78d6744;
+    opacity: 0.5;
+}
+
 .manage__what__containerbutton {
     margin-top: 2rem;
 }
