--- a/scss/_what_they_said.scss
+++ b/scss/_what_they_said.scss
@@ -66,7 +66,14 @@
     color: white;
     background-color: #FF4500;
     border: none;
-    border-radius: 30px
+    border-radius: 30px;
+    
+}
+
+.manage__what__containerbutton {
+    // align-items: center;
+    // justify-content: center;
+    text-align: center;
 }
 
 
