--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -10,7 +10,7 @@ body {
   background-image: url("../images/bg-tablet-pattern.svg");
   background-size: 100%;
   background-repeat: no-repeat;
-  background-position: 100px -56px; }
+  background-position: 100% -30%; }
 
 .masthead {
   position: relative; }
@@ -50,7 +50,7 @@ body {
 
 .manage__bring {
   background-image: url("../images/bg-tablet-pattern.svg");
-  background-size: 100%;
+  background-size: 50%;
   background-repeat: no-repeat;
   background-position: 120px 200px;
   text-align: center;
@@ -145,7 +145,8 @@ input[type=checkbox]:checked ~ .curtain .curtain {
     color: black; }
   .masthead__navigation__list {
     display: flex;
-    color: black; }
+    color: black;
+    margin-inline-start: calc(1rem * 3); }
   input[type=checkbox]:not(:checked) + .masthead__navigation {
     transform: translateX(0);
     transition: none;
@@ -174,7 +175,10 @@ input[type=checkbox]:checked ~ .curtain .curtain {
     top: calc(1rem * 14);
     width: 40%; }
   .manage__bring__subtitle {
-    font-size: 32px; } }
+    font-size: 32px; }
+  .image__close,
+  .image__open {
+    display: none; } }
 
 .footer__simplify {
   background-color: #FF4500;
@@ -377,6 +381,9 @@ input[type=checkbox]:checked ~ .curtain .curtain {
   background-color: #FF4500;
   border: none;
   border-radius: 30px; }
+
+.manage__what__containerbutton {
+  text-align: center; }
 
 .manage__what__button:hover {
   box-shadow: 2px 10px 0px #f78d6744;
